# plox

./: .gitignore  .rustfmt.toml  Cargo.toml  README.docify.md  README.md  SAMPLE.docify.md  SAMPLE.md  build.rs  cli-help.md  publish-notes.md
.github/workflows/: ci.yml  rust.yml
plox_macros/: Cargo.toml
plox_macros/src/: lib.rs
some-playground/: default.gnuplot  deltas.gnuplot  demo-lines-two-files.gnuplot  demo-lines.gnuplot  demo-lines.toml  panels-two-files.gnuplot  panels.gnuplot
src/: align_ranges.rs  cli.rs  data_source_cli_builder.rs  error.rs  gnuplot.rs  graph_cli_builder.rs  graph_config.rs  lib.rs  logging.rs  main.rs  match_preview_cli_builder.rs  plotly_backend.rs  process_log.rs  resolved_graph_config.rs  utils.rs
templates/: plotly_template.html
test-files/: config01-with-timestamp-format-with-per-file-panel.toml  config01-with-timestamp-format.toml  config05.toml  config06.toml  config08.toml  config10.toml  some-data.csv  txpool-2.toml  txpool.toml
tests/: cmd_tests.rs
tests/.examples-expected/: default.gnuplot  demo-lines.gnuplot
tests/demos/: graph3.html
tests/examples/: basic.gnuplot  default.gnuplot  default.html  deltas.gnuplot  demo-lines-two-files.gnuplot  demo-lines-two-files.html  demo-lines.gnuplot  demo-lines.toml  panels-two-files.gnuplot  panels.gnuplot  regex.gnuplot
tests/test-files/: c.toml  config01-with-per-file-panel.toml  config01.toml  config02.toml  config03.toml  config04.toml  config07.toml  config09.toml  config11.toml  config12.toml  config13.toml  config14.toml  invalid-config.toml
