[package]
name = "plox_macros"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Helper proc-macros for plox cli tool."
repository="https://github.com/michalkucharczyk/plox/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11.1"
syn = "2.0"
